readme updates everywhere

--- a/complete/config/config.yml
+++ b/complete/config/config.yml
@@ -12,7 +12,7 @@ mortar:
     level: debug
     console: true
   monitor:
-    address: "host:port"
+    address: "address:port"
     prefix: "awesome.project"
     tags:
       tag1: value
