grpc-gateway v2, makefile fixes

--- a/07-makefile/Makefile
+++ b/07-makefile/Makefile
@@ -10,8 +10,8 @@ gen-api:
 	@protoc -I.\
         -I$$GOPATH/src \
         -I$$GOPATH/src/github.com/grpc-ecosystem/grpc-gateway/third_party/googleapis \
-        --grpc-gateway_out=:api \
-        --swagger_out=:api \
+        --grpc-gateway_out=repeated_path_param_separator=ssv:. \
+        --openapiv2_out=repeated_path_param_separator=ssv:. \
         --go_out=plugins=grpc:api \
         api/garage.proto\
 
